--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js"></script>
   </head>
   <body>
     <div class="container">
@@ -55,6 +56,14 @@
         </div>
       </nav>
 
+      <div class="jumbotron text-center" id="jumbotron">
+        <div class="jumbotron-overlay"></div>
+        <h1 class="display-4">Welcome to My Favorite Albums</h1>
+        <p class="lead">
+          Discover the best albums of Coldplay and other artists
+        </p>
+      </div>
+
       <h1 id="favorite">
         Favorite<span class="tiny"
           ><a
@@ -77,6 +86,7 @@
             <p class="artist">Coldplay</p>
             <p class="genre"><span>Hiphop</span><span> • </span>2m 30s</p>
           </div>
+          <div class="album-badge badge badge-primary">Genre</div>
         </div>
         <div class="card col-sm-6 col-md-4 col-lg-3">
           <img class="cover-img" src="/img/img1.png" alt="coldplay" />
@@ -85,6 +95,7 @@
             <p class="artist">Coldplay</p>
             <p class="genre"><span>Hiphop</span><span> • </span>2m 30s</p>
           </div>
+          <div class="album-badge badge badge-primary">Genre</div>
         </div>
         <div class="card col-sm-6 col-md-4 col-lg-3">
           <img class="cover-img" src="/img/colplay.png" alt="coldplay" />
@@ -93,6 +104,7 @@
             <p class="artist">Coldplay</p>
             <p class="genre"><span>Hiphop</span><span> • </span>2m 30s</p>
           </div>
+          <div class="album-badge badge badge-primary">Genre</div>
         </div>
         <div class="card col-sm-6 col-md-4 col-lg-3">
           <img class="cover-img" src="/img/colplay.png" alt="coldplay" />
@@ -101,6 +113,7 @@
             <p class="artist">Coldplay</p>
             <p class="genre"><span>Hiphop</span><span> • </span>2m 30s</p>
           </div>
+          <div class="album-badge badge badge-primary">Genre</div>
         </div>
         <div class="card col-sm-6 col-md-4 col-lg-3">
           <img class="cover-img" src="/img/colplay.png" alt="coldplay" />
@@ -109,6 +122,7 @@
             <p class="artist">Coldplay</p>
             <p class="genre"><span>Hiphop</span><span> • </span>2m 30s</p>
           </div>
+          <div class="album-badge badge badge-primary">Genre</div>
         </div>
         <div class="card col-sm-6 col-md-4 col-lg-3">
           <img class="cover-img" src="/img/colplay.png" alt="coldplay" />
@@ -117,6 +131,7 @@
             <p class="artist">Coldplay</p>
             <p class="genre"><span>Hiphop</span><span> • </span>2m 30s</p>
           </div>
+          <div class="album-badge badge badge-primary">Genre</div>
         </div>
         <div class="card col-sm-6 col-md-4 col-lg-3">
           <img class="cover-img" src="/img/colplay.png" alt="coldplay" />
@@ -125,6 +140,7 @@
             <p class="artist">Coldplay</p>
             <p class="genre"><span>Hiphop</span><span> • </span>2m 30s</p>
           </div>
+          <div class="album-badge badge badge-primary">Genre</div>
         </div>
         <div class="card col-sm-6 col-md-4 col-lg-3">
           <img class="cover-img" src="/img/colplay.png" alt="coldplay" />
@@ -133,6 +149,7 @@
             <p class="artist">Coldplay</p>
             <p class="genre"><span>Hiphop</span><span> • </span>2m 30s</p>
           </div>
+          <div class="album-badge badge badge-primary">Genre</div>
         </div>
       </div>
       <div class="row">
@@ -294,7 +311,6 @@
         <div class="col-sm-12 pl-0">
           <h1 id="imgboard">Image Board</h1>
         </div>
-
         <img class="col-sm-2 img2" src="img/concert.png" alt="" />
         <img class="col-sm-2 img2" src="img/profile.png" alt="" />
         <img class="col-sm-2 img2" src="img/concert.png" alt="" />
@@ -320,7 +336,136 @@
         <img class="col-sm-2 img2" src="img/concert.png" alt="" />
         <img class="col-sm-2 img2" src="img/concert.png" alt="" />
       </div>
+      <section class="tracklist">
+        <h2>Album Tracklist</h2>
+        <table class="table table-striped" style="width: 100%">
+          <thead>
+            <tr>
+              <th>#</th>
+              <th>Title</th>
+              <th>Artist</th>
+              <th>Duration</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1</td>
+              <td>Track 1</td>
+              <td>Coldplay</td>
+              <td>3:50</td>
+              <td><button class="btn btn-danger delete-btn">DELETE</button></td>
+            </tr>
+
+            <tr>
+              <td>1</td>
+              <td>Track 1</td>
+              <td>Coldplay</td>
+              <td>3:50</td>
+              <td><button class="btn btn-danger delete-btn">DELETE</button></td>
+            </tr>
+
+            <tr>
+              <td>1</td>
+              <td>Track 1</td>
+              <td>Coldplay</td>
+              <td>3:50</td>
+              <td><button class="btn btn-danger delete-btn">DELETE</button></td>
+            </tr>
+          </tbody>
+        </table>
+        <button
+          data-toggle="modal"
+          data-target="#addTrackModal"
+          class="add-track-btn btn btn-primary"
+        >
+          Add Track
+        </button>
+      </section>
     </div>
+    <div class="modal" id="addTrackModal">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Add New Track</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="form-group">
+              <div class="input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text">Track Number</span>
+                </div>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="trackNumber"
+                  placeholder="Enter Track Number"
+                />
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text">Track Title</span>
+                </div>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="trackTitle"
+                  placeholder="Enter Track Title"
+                />
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text">Artist Name</span>
+                </div>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="artistName"
+                  placeholder="Enter Artist Name"
+                />
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text">Track Duration</span>
+                </div>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="trackDuration"
+                  placeholder="Enter Track Duration"
+                />
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-primary" id="addTrackBtn">
+                Add
+              </button>
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-dismiss="modal"
+              >
+                Close
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <footer class="footer text-center text-white">
       <!-- Grid container -->
       <div class="container p-4 pb-0">
