--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
         <img class="col-sm-2 img2" src="img/concert.png" alt="" />
         <img class="col-sm-2 img2" src="img/concert.png" alt="" />
       </div>
-      <section class="tracklist">
+      <section class="col-sm-12 tracklist">
         <h2>Album Tracklist</h2>
         <table class="table table-striped" style="width: 100%">
           <thead>
@@ -345,6 +345,7 @@
               <th>Title</th>
               <th>Artist</th>
               <th>Duration</th>
+              <th></th>
             </tr>
           </thead>
           <tbody>
